# CategoricalSNN.hs

./: .gitignore  cabal.project  categorical-snn.cabal
examples/: Experiments.hs  FigureGeneration.hs  figure_generation.jl  plot_results.jl
src/: CategoricalSNN.hs
src/CategoricalSNN/: Category.hi  Category.hs  Network.hi  Network.hs  Neuron.hi  Neuron.hs  Simulation.hi  Simulation.hs  Synapse.hi  Synapse.hs  TopEntity.hs  Types.hi  Types.hs
synthesis/: TopEntities.hi  TopEntities.hs
test/: Main.hs
verilog/SynthesisTopEntities.snn12to7to5to3/: clash-manifest.json  snn12to7to5to3.v  snn12to7to5to3_shim.cpp
verilog/SynthesisTopEntities.snn12to7to5to3Flat/: clash-manifest.json  snn12to7to5to3Flat.v  snn12to7to5to3Flat_shim.cpp
verilog/SynthesisTopEntities.snn16to8to4/: clash-manifest.json  snn16to8to4.v  snn16to8to4_shim.cpp
verilog/SynthesisTopEntities.snn16to8to4Flat/: clash-manifest.json  snn16to8to4Flat.v  snn16to8to4Flat_shim.cpp
verilog/SynthesisTopEntities.snn32to16to8/: clash-manifest.json  snn32to16to8.v  snn32to16to8_shim.cpp
verilog/SynthesisTopEntities.snn32to16to8Flat/: clash-manifest.json  snn32to16to8Flat.v  snn32to16to8Flat_shim.cpp
verilog/SynthesisTopEntities.snn4to3/: clash-manifest.json  snn4to3.v  snn4to3_shim.cpp
verilog/SynthesisTopEntities.snn4to3Flat/: clash-manifest.json  snn4to3Flat.v  snn4to3Flat_shim.cpp
verilog/SynthesisTopEntities.snn4to3to2/: clash-manifest.json  snn4to3to2.v  snn4to3to2_shim.cpp
verilog/SynthesisTopEntities.snn4to3to2Flat/: clash-manifest.json  snn4to3to2Flat.v  snn4to3to2Flat_shim.cpp
verilog/SynthesisTopEntities.snn8to4/: clash-manifest.json  snn8to4.v  snn8to4_shim.cpp
verilog/SynthesisTopEntities.snn8to4Flat/: clash-manifest.json  snn8to4Flat.v  snn8to4Flat_shim.cpp
